--- a/dpc-web/product-wallpaper-collection.html
+++ b/dpc-web/product-wallpaper-collection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DP Céline - Fabric</title>
+    <title>DP Céline - WallCovering</title>
     <!-- bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -34,13 +34,13 @@
                         </div>
                     </div>
                     <div class="body_head">
-                        <h1>Fabric</h1>
+                        <h1>Wall Covering</h1>
                         <div class="d-flex align-items-center menu_fabric">
                             <a class="nav_item" id="next-tab" href="homepage2.html">Home</a>
                             <p class="nav_item">/</p>
                             <a class="nav_item" id="next-tab">All Products</a>
                             <p class="nav_item">/</p>
-                            <a class="nav_item" id="current-tab">Fabric</a>
+                            <a class="nav_item" id="current-tab">Wall Covering</a>
                         </div>
                         <div id="line"></div>
                     </div>
@@ -51,7 +51,7 @@
                 <div class="row">
                     <div class="d-flex align-items-center tab-collection-design">
                         <a class="nav_item" id="current-tab" >Collection</a>
-                        <a class="nav_item" id="next-tab" href="product-fabric-design.html">Design</a>
+                        <a class="nav_item" id="next-tab" href="product-wallpaper-design.html">Design</a>
                     </div>
                 </div>
                 <div class="row pt-5 pb-3">
