--- a/dpc-web/product-wallpaper-design.html
+++ b/dpc-web/product-wallpaper-design.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DP Céline - Fabric</title>
+    <title>DP Céline - WallCovering</title>
     <!-- bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/product-fabric-collection.css">
+    <link rel="stylesheet" href="css/product-fabric-design.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -34,13 +34,13 @@
                         </div>
                     </div>
                     <div class="body_head">
-                        <h1>Fabric</h1>
+                        <h1>Wall Covering</h1>
                         <div class="d-flex align-items-center menu_fabric">
                             <a class="nav_item" id="next-tab" href="homepage2.html">Home</a>
                             <p class="nav_item">/</p>
                             <a class="nav_item" id="next-tab">All Products</a>
                             <p class="nav_item">/</p>
-                            <a class="nav_item" id="current-tab">Fabric</a>
+                            <a class="nav_item" id="current-tab">Wall Covering</a>
                         </div>
                         <div id="line"></div>
                     </div>
@@ -50,8 +50,8 @@
             <section class="tab-general-fabric position-relative">
                 <div class="row">
                     <div class="d-flex align-items-center tab-collection-design">
-                        <a class="nav_item" id="current-tab" >Collection</a>
-                        <a class="nav_item" id="next-tab" href="product-fabric-design.html">Design</a>
+                        <a class="nav_item" id="next-tab" href="product-wallpaper-collection.html">Collection</a>
+                        <a class="nav_item" id="current-tab">Design</a>
                     </div>
                 </div>
                 <div class="row pt-5 pb-3">
@@ -98,136 +98,133 @@
                 </div>
                 <div class="container">
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-alaska.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/amigo01.jpg" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Alaska</p>
-                            <p id="collection-quantity">(15)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Amigo</p>
+                        <p class="pt-2 m-0" id="design-code">Amigo - 01-Walnut</p>
                     </div>
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-capsule.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/amigo02.jpg" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Capsule</p>
-                            <p id="collection-quantity">(15)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Amigo</p>
+                        <p class="pt-2 m-0" id="design-code">Amigo - 02-Mushroom</p>
                     </div>
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-deluxe.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/amigo03.jpg" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Deluxe</p>
-                            <p id="collection-quantity">(8)</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="container">
-                    <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-iconic.jpg" alt=""
-                                    loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Iconic</p>
-                            <p id="collection-quantity">(13)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Amigo</p>
+                        <p class="pt-2 m-0" id="design-code">Amigo - 03-Taupe</p>
                     </div>
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-copenhague.png" alt=""
+                        <img class="img w-100" src="images/DPC/amigo04.jpg" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Copenhague</p>
-                            <p id="collection-quantity">(10)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Amigo</p>
+                        <p class="pt-2 m-0" id="design-code">Amigo - 04-Pecan</p>
                     </div>
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-mantilla.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/amigo08.jpg" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Manitlla</p>
-                            <p id="collection-quantity">(7)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Amigo</p>
+                        <p class="pt-2 m-0" id="design-code">Amigo - 08-Plum</p>
                     </div>
                 </div>
 
                 <div class="container">
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-marmont.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/terra-06.webp" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Marmont</p>
-                            <p id="collection-quantity">(11)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Terra NW</p>
+                        <p class="pt-2 m-0" id="design-code">Terra NW - 06</p>
                     </div>
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-naturalstory.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/terra-26.webp" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Natural Story</p>
-                            <p id="collection-quantity">(10)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Terra NW</p>
+                        <p class="pt-2 m-0" id="design-code">Terra NW - 26</p>
                     </div>
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-nero.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/terra-29.webp" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Nero</p>
-                            <p id="collection-quantity">(9)</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="container">
-                    <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-porthouse.jpg" alt=""
-                                    loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Porthouse</p>
-                            <p id="collection-quantity">(14)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Terra NW</p>
+                        <p class="pt-2 m-0" id="design-code">Terra NW - 29</p>
                     </div>
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-sunlight.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/terra-58.webp" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Sunlight</p>
-                            <p id="collection-quantity">(10)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Terra NW</p>
+                        <p class="pt-2 m-0" id="design-code">Terra NW - 58</p>
                     </div>
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-twirler.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/terra-75.webp" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Twirler</p>
-                            <p id="collection-quantity">(17)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Terra NW</p>
+                        <p class="pt-2 m-0" id="design-code">Terra NW - 75</p>
                     </div>
                 </div>
 
                 <div class="container">
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-ultraweave.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/VELLUTO-1-160x160.webp" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Ultra Weave</p>
-                            <p id="collection-quantity">(14)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Velluto</p>
+                        <p class="pt-2 m-0" id="design-code">Velluto - 01-Cream</p>
                     </div>
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-woolskin.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/VELLUTO-3-160x160.webp" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Woolskin</p>
-                            <p id="collection-quantity">(18)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Velluto</p>
+                        <p class="pt-2 m-0" id="design-code">Velluto - 03-Mika</p>
                     </div>
                     <div class="fabric-item">
-                        <img class="img w-100" src="images/acacia-collection/collection-twirler.jpg" alt=""
+                        <img class="img w-100" src="images/DPC/VELLUTO-9-160x160.webp" alt=""
                                     loading="lazy">
-                        <div class="d-flex pt-4 m-0" id="block-collection-lable">
-                            <p id="collection-name">Twirler</p>
-                            <p id="collection-quantity">(17)</p>
-                        </div>
+                        <p class="pt-2 m-0" id="design-name">Velluto</p>
+                        <p class="pt-2 m-0" id="design-code">Velluto - 09-Olive</p>
+                    </div>
+                    <div class="fabric-item">
+                        <img class="img w-100" src="images/DPC/Velluto-33-Rust-160x160.webp" alt=""
+                                    loading="lazy">
+                        <p class="pt-2 m-0" id="design-name">Velluto</p>
+                        <p class="pt-2 m-0" id="design-code">Velluto - 33-Rust</p>
+                    </div>
+                    <div class="fabric-item">
+                        <img class="img w-100" src="images/DPC/Velluto-36-Peacock-160x160.webp" alt=""
+                                    loading="lazy">
+                        <p class="pt-2 m-0" id="design-name">Velluto</p>
+                        <p class="pt-2 m-0" id="design-code">Velluto - 36-Peacock</p>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="fabric-item">
+                        <img class="img w-100" src="images/DPC/deluxe-03.jpg" alt=""
+                                    loading="lazy">
+                        <p class="pt-2 m-0" id="design-name">Deluxe</p>
+                        <p class="pt-2 m-0" id="design-code">Deluxe - 03-Mouse</p>
+                    </div>
+                    <div class="fabric-item">
+                        <img class="img w-100" src="images/DPC/deluxe-34.jpg" alt=""
+                                    loading="lazy">
+                        <p class="pt-2 m-0" id="design-name">Deluxe</p>
+                        <p class="pt-2 m-0" id="design-code">Deluxe - 34-Mist</p>
+                    </div>
+                    <div class="fabric-item">
+                        <img class="img w-100" src="images/DPC/deluxe-36.jpg" alt=""
+                                    loading="lazy">
+                        <p class="pt-2 m-0" id="design-name">Deluxe</p>
+                        <p class="pt-2 m-0" id="design-code">Deluxe - 36-Navy</p>
+                    </div>
+                    <div class="fabric-item">
+                        <img class="img w-100" src="images/DPC/deluxe-46.jpg" alt=""
+                                    loading="lazy">
+                        <p class="pt-2 m-0" id="design-name">Deluxe</p>
+                        <p class="pt-2 m-0" id="design-code">Deluxe - 46-Sunset</p>
+                    </div>
+                    <div class="fabric-item">
+                        <img class="img w-100" src="images/DPC/deluxe-53.jpg" alt=""
+                                    loading="lazy">
+                        <p class="pt-2 m-0" id="design-name">Deluxe</p>
+                        <p class="pt-2 m-0" id="design-code">Deluxe - 53-Ivory</p>
                     </div>
                 </div>
 
@@ -249,7 +246,7 @@
                                 <h3>Filters</h3> 
                             </div>
                             <div class="col-10 p-0" style="display: flex; justify-content:flex-end; align-items:center">
-                                <img id="x-close-1" src="images/x-close.png" onclick="hide_filterbar()" alt="" style="cursor:pointer">
+                                <img id="x-close-1" src="images/x-close.png" onclick="hide_filterbar()" alt="" style="cursor: pointer;">
                             </div>
                         </div>
                         <div class="row p-0">
@@ -258,7 +255,7 @@
                         
                         <!-- selected Filters -->
                         <div class="row" style="margin-top: 40px;">
-                            <div class="col-6 p-0" >
+                            <div class="col-6 p-0">
                                 <h4>Selected Filters</h4>
                             </div>
                             <div class="col-6 p-0" style="display: flex; justify-content:flex-end;">
