--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -461,6 +461,11 @@
             </section>
         </div>
     </div>
+    <section class="loader">
+        <div class="container">
+            <img src="./images/dpceline.png" alt="">
+        </div>
+    </section>
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
