--- a/dpc-web/our-project-detail.html
+++ b/dpc-web/our-project-detail.html
@@ -143,8 +143,10 @@
                         <div class="col-6">
                             <img src="./images/project/The masterise sale gallery/khu-vuc-tiep-khach-the-galleria-by-masterise-homes.jpg" alt="">
                         </div>
-                        <div class="col-6">
-                            
+                        <div class="col-6" style="margin-top: 80px;padding-left:30px">
+                            <a href="./our-project-detail.html">READ MORE</a>
+                            <p>Next project</p>
+                            <h2>The Galleria by Masterise Homes</h2>
                         </div>
                     </div>
                 </div>
