--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -251,7 +251,7 @@
             </section>
             
             <!-- /* project */ -->
-            <!-- <section class="project position-relative">
+            <section class="project position-relative">
                 <div class="container">
                     <h2 class="title text-center">
                         Projects we are proud of
@@ -281,7 +281,7 @@
                         </div>
                     </div>
                 </a>
-            </section> -->
+            </section>
             <!-- /* clients */ -->
             <section class="clients">
                 <div class="container">
@@ -461,11 +461,11 @@
             </section>
         </div>
     </div>
-    <section class="loader">
+    <!-- <section class="loader">
         <div class="container">
             <img src="./images/dpceline.png" alt="">
         </div>
-    </section>
+    </section> -->
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
