--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -41,7 +41,17 @@
             </section>
 
             <!-- /* banner */ -->
-            <section class="banner position-relative mt-5"  id="image-section">
+            <section class="banner" id="section2">
+                <div class="image-container">
+                    <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt="">
+                    <div class="overlay"></div>
+                </div>
+                <div class="content" >
+                    <p>PROJECT OF THE MONTH</p>
+                    <h3>JW MARRIOT PHU QUOC RESORT</h3>
+                </div>
+            </section>
+            <!-- <section class="banner position-relative mt-5"  id="image-section">
         
                 <div class="container h-100">
                     <div class="swiper proj_mouth m-0 h-100">
@@ -99,7 +109,7 @@
                         <div class="swiper-button-prev"></div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- /* Our Services */ -->
             <section class="Our_Services">
                 <div class="container">
@@ -113,7 +123,7 @@
                                     <div class="img-wrapper-service">
                                         <img class="w-100" src="images/susan-wilkinson-1DvlOy6BcmI-unsplash.png" alt=""
                                         loading="lazy">
-                                        <div class="overlay-service"></div>
+                                        <div class="overlay_service"></div>
                                     </div>
                                     <p class="pt-2 m-0">Fabric</p>
                                 </a>
@@ -123,7 +133,7 @@
                                     <div class="img-wrapper-service">
                                         <img class="w-100" src="images/elimende-inagella-hO4AGt3czSQ-unsplash.png" alt=""
                                         loading="lazy">
-                                        <div class="overlay-service"></div>
+                                        <div class="overlay_service"></div>
                                     </div>
                                     <p class="pt-2 m-0">Leather</p>
                                 </a>
@@ -133,7 +143,7 @@
                                     <div class="img-wrapper-service">
                                         <img class="w-100" src="images/mona-eendra-vC8wj_Kphak-unsplash.png" alt=""
                                         loading="lazy">
-                                        <div class="overlay-service"></div>
+                                        <div class="overlay_service"></div>
                                     </div>
                                     <p class="pt-2 m-0">Wall Covering</p>
                                 </a>
@@ -142,7 +152,7 @@
                                 <a href="./product-fabric-design.html" style="text-decoration: none;">
                                     <div class="img-wrapper-service">
                                         <img class="w-100" src="images/jon-tyson-un5DGskIJuE-unsplash.png" alt="" loading="lazy">
-                                        <div class="overlay-service"></div>
+                                        <div class="overlay_service"></div>
                                     </div>
                                     <p class="pt-2 m-0">Curtain</p>
                                 </a>
@@ -153,7 +163,7 @@
                                     <div class="img-wrapper-service">
                                         <img class="w-100 h-100" src="images/440b7a5e8dc4e1be8abf2297431a1f07.jpg" alt=""
                                         loading="lazy">
-                                        <div class="overlay-service"></div>
+                                        <div class="overlay_service"></div>
                                     </div>
                                     
                                     <p class="pt-2 m-0">Roller Blind</p>
@@ -164,7 +174,7 @@
                                     <div class="img-wrapper-service">
                                         <img class="w-100 h-100" src="images/Bespoke_service.png" alt=""
                                         loading="lazy">
-                                        <div class="overlay-service"></div>
+                                        <div class="overlay_service"></div>
                                     </div>
                                     <p class="pt-2 m-0">Bespoke service</p>
                                 </a>
@@ -468,9 +478,13 @@
     </section> -->
 
     <!-- Swiper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> 
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+   
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/menu-script.js"></script>
+    <script src="js/Scrollbanner.js"></script>
 </body>
 
 </html>
