--- a/dpc-web/t.html
+++ b/dpc-web/t.html
@@ -39,6 +39,7 @@
         transform: translate(-50%, -50%);
         overflow: hidden;
         transition: width 0.5s ease, height 0.5s ease;
+        background-color: red;
       }
       
       .image-container img {
