--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -46,6 +46,13 @@
                     <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt="">
                     <div class="overlay"></div>
                 </div>
+                <!-- <div class="surrounding-images">
+                    <img src="images/component1.jpg" class="surround-img" alt="">
+                    <img src="images/component2.jpg" class="surround-img" alt="">
+                    <img src="images/component3.jpg" class="surround-img" alt="">
+                    <img src="images/component4.jpg" class="surround-img" alt="">
+                    <img src="images/component5.jpg" class="surround-img" alt="">
+                </div> -->
                 <div class="content" >
                     <p>PROJECT OF THE MONTH</p>
                     <h3>JW MARRIOT PHU QUOC RESORT</h3>
