--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -42,21 +42,29 @@
 
             <!-- /* banner */ -->
             <section class="banner" id="section2">
+                <div class="surrounding-top-images">
+                    <img src="images/component1.jpg" class="surround-img" alt="">
+                </div>
+                <div class="surrounding-left-images">
+                    <img src="images/component2.jpg" class="surround-img" alt="">
+                </div>
+                <div class="surrounding-right-images">
+                    <img src="images/component3.jpg" class="surround-img" alt="">
+                </div>
                 <div class="image-container">
                     <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt="">
                     <div class="overlay"></div>
                 </div>
-                <!-- <div class="surrounding-images">
-                    <img src="images/component1.jpg" class="surround-img" alt="">
-                    <img src="images/component2.jpg" class="surround-img" alt="">
-                    <img src="images/component3.jpg" class="surround-img" alt="">
+                <div class="surrounding-bottom-left-images">
                     <img src="images/component4.jpg" class="surround-img" alt="">
+                </div>
+                <div class="surrounding-bottom-images">
                     <img src="images/component5.jpg" class="surround-img" alt="">
-                </div> -->
-                <div class="content" >
+                </div>
+                <!-- <div class="content" >
                     <p>PROJECT OF THE MONTH</p>
                     <h3>JW MARRIOT PHU QUOC RESORT</h3>
-                </div>
+                </div> -->
             </section>
             <!-- <section class="banner position-relative mt-5"  id="image-section">
         
