--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -41,12 +41,12 @@
             </section>
 
             <!-- /* banner */ -->
-            <section class="banner" id="section2">
+            <section class="banner">
                 <div class="image-container">
                     <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt="">
                     <div class="overlay"></div>
                 </div>
-                <div class="content" >
+                <div class="content">
                     <p>PROJECT OF THE MONTH</p>
                     <h3>JW MARRIOT PHU QUOC RESORT</h3>
                 </div>
