--- a/dpc-web/product-fabric-design.html
+++ b/dpc-web/product-fabric-design.html
@@ -96,6 +96,84 @@
                         <p id="sum-products">20488 Products, 1598 designs</p>
                     </div>
                 </div>
+
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/DPC/amigo01.jpg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Amigo</p>
+                            <p class="pt-2 m-0" id="design-code">Amigo - 01</p>
+                        </div>
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/Leather/Aury/Rodeo/Rodeo - FENNEL .jpeg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Rodeo</p>
+                            <p class="pt-2 m-0" id="design-code">Rodeo - Fennel</p>
+                        </div>
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/Leather/Aury/Rodeo/Rodeo - MOCCASIN .jpeg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Rodeo</p>
+                            <p class="pt-2 m-0" id="design-code">Rodeo - Moccasin</p>
+                        </div>
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/Leather/Aury/Rodeo/Rodeo - NUTMEG .jpeg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Rodeo</p>
+                            <p class="pt-2 m-0" id="design-code">Rodeo - Nutmeg</p>
+                        </div>
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/Leather/Aury/Rodeo/Rodeo - PAPRIKA .jpeg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Rodeo</p>
+                            <p class="pt-2 m-0" id="design-code">Rodeo - Paprika</p>
+                        </div>
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/Leather/Aury/Rodeo/Rodeo - PECAN .jpeg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Rodeo</p>
+                            <p class="pt-2 m-0" id="design-code">Rodeo - Pecan</p>
+                        </div>
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/Leather/Aury/Rodeo/Rodeo - SAND .jpeg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Rodeo</p>
+                            <p class="pt-2 m-0" id="design-code">Rodeo - Sand</p>
+                        </div>
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/Leather/Aury/Rodeo/Rodeo - VERDE .jpeg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Rodeo</p>
+                            <p class="pt-2 m-0" id="design-code">Rodeo - Verde</p>
+                        </div>
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/Leather/Aury/Rodeo/rodeo-antracite.jpeg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Rodeo</p>
+                            <p class="pt-2 m-0" id="design-code">Rodeo - Antracite</p>
+                        </div>
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/Leather/Aury/Rodeo/rodeo-ashen.jpeg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Rodeo</p>
+                            <p class="pt-2 m-0" id="design-code">Rodeo - Ashen</p>
+                        </div>
+                        <div class="swiper-slide fabric-item">
+                            <img class="img w-100" src="images/Leather/Aury/Rodeo/rodeo-chocolate.jpeg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Rodeo</p>
+                            <p class="pt-2 m-0" id="design-code">Rodeo - Chocolate</p>
+                        </div>
+                    </div>
+                    <!-- Add Pagination -->
+                    <div class="swiper-pagination"></div>
+
+                    <!-- Add Navigation -->
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
+
                 <div class="container">
                     <div class="fabric-item">
                         <a href="./product-fabric-detail.html" style="text-decoration: none;">
@@ -1015,6 +1093,8 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+        <script src="js/swiper-product.js"></script>
     </div>
    
 </body>
