--- a/dpc-web/product-fabric-collection.html
+++ b/dpc-web/product-fabric-collection.html
@@ -834,7 +834,7 @@
 
                         <!-- button apply  -->
                         <div class="row mt-5">
-                            <button type="button" class="btn btn-secondary">
+                            <button type="button" class="btn btn-secondary btn-filter-action">
                                 APPLY(29) 
                             </button>
                             <div id="arrow">
