--- a/dpc-web/product-fabric-detail.html
+++ b/dpc-web/product-fabric-detail.html
@@ -46,7 +46,7 @@
                         </div>
                         <div class="col-2 small-view">
                             <div class="current-selected">
-                                <img src="images/DPC/deluxe-03.jpg" onclick="switchImage(this)" alt="">
+                                <img src="images/DPC/sofa.png" onclick="switchImage(this)" alt="">
                             </div>
                             <div class="next-selected">
                                 <img src="images/DPC/deluxe-15.jpg" onclick="switchImage(this)" alt="">
