--- a/dpc-web/test.html
+++ b/dpc-web/test.html
@@ -19,12 +19,16 @@
       overflow: hidden;
     }
     .images-container {
-      position: absolute;
-      width: 100%;
-      height: 100%;
+      position: relative;
+      display: grid;
+      grid-template-rows: repeat(3, auto);
+      row-gap: 20px;
+      justify-items: center;
+      align-items: center;
     }
     .main-image {
-      position: absolute;
+      grid-row: 2;
+      justify-self: center;
       width: 300px;
       height: 300px;
       z-index: 1;
@@ -32,16 +36,18 @@
     }
     .overlay-image {
       position: absolute;
-      width: 150px;
-      height: 150px;
       border-radius: 10px;
       opacity: 1;
     }
-    .overlay-image:nth-child(1) { top: 20%; left: 10%; }
-    .overlay-image:nth-child(2) { top: 10%; right: 10%; }
-    .overlay-image:nth-child(3) { bottom: 20%; left: 15%; }
-    .overlay-image:nth-child(4) { bottom: 15%; right: 15%; }
-    .overlay-image:nth-child(5) { top: 50%; left: 50%; transform: translate(-50%, -50%); }
+    .row-1 .overlay-image {
+      grid-row: 1;
+    }
+    .row-2 .overlay-image {
+      grid-row: 2;
+    }
+    .row-3 .overlay-image {
+      grid-row: 3;
+    }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
@@ -49,12 +55,18 @@
 <body>
   <div class="section">
     <div class="images-container">
-      <img src="https://via.placeholder.com/300" alt="Main Image" class="main-image">
-      <img src="https://via.placeholder.com/150" alt="Overlay Image 1" class="overlay-image">
-      <img src="https://via.placeholder.com/150" alt="Overlay Image 2" class="overlay-image">
-      <img src="https://via.placeholder.com/150" alt="Overlay Image 3" class="overlay-image">
-      <img src="https://via.placeholder.com/150" alt="Overlay Image 4" class="overlay-image">
-      <img src="https://via.placeholder.com/150" alt="Overlay Image 5" class="overlay-image">
+      <div class="row-1">
+        <img src="https://via.placeholder.com/200" alt="Overlay Image" class="overlay-image">
+      </div>
+      <div class="row-2">
+        <img src="https://via.placeholder.com/300" alt="Main Image" class="main-image">
+        <img src="https://via.placeholder.com/150" alt="Overlay Image" class="overlay-image">
+        <img src="https://via.placeholder.com/150" alt="Overlay Image" class="overlay-image">
+      </div>
+      <div class="row-3">
+        <img src="https://via.placeholder.com/180" alt="Overlay Image" class="overlay-image">
+        <img src="https://via.placeholder.com/180" alt="Overlay Image" class="overlay-image">
+      </div>
     </div>
   </div>
   <script>
@@ -63,6 +75,19 @@
     const overlayImages = document.querySelectorAll('.overlay-image');
     const mainImage = document.querySelector('.main-image');
 
+    const gap = 50; // Fixed gap distance from the edges of the main image
+
+    // Set directions and positions for each image
+    const positions = [
+      { x: 0, y: -200 },
+      { x: -200, y: 0 },
+      { x: 0, y: 200 },
+      { x: 200, y: 0 },
+      { x: -150, y: 150 },
+      { x: 150, y: 150 },
+    ];
+
+    // Create timeline
     gsap.timeline({
       scrollTrigger: {
         trigger: '.section',
@@ -72,25 +97,28 @@
         pin: true,
       }
     })
+    // Move overlay images outward to maintain a grid-like position
     .to(overlayImages, {
-      x: (index, target) => {
-        const direction = target.offsetLeft < window.innerWidth / 2 ? -1 : 1;
-        return direction * 200;
-      },
-      y: (index, target) => {
-        const direction = target.offsetTop < window.innerHeight / 2 ? -1 : 1;
-        return direction * 200;
-      },
-      scale: 1.5,
-      opacity: 0,
-      stagger: 0.1,
+      x: (index) => positions[index % positions.length].x + gap,
+      y: (index) => positions[index % positions.length].y + gap,
       duration: 1,
+      ease: 'none',
     })
+    // Synchronize overlay images with the main image expansion
+    .to(overlayImages, {
+      x: (index) => positions[index % positions.length].x + gap * 5,
+      y: (index) => positions[index % positions.length].y + gap * 5,
+      scale: 3,
+      opacity: 0, // Fade out only when main image fully expands
+      duration: 2,
+      ease: 'none',
+    }, "-=1")
+    // Expand main image to full screen
     .to(mainImage, {
-      scale: 4,
-      duration: 1,
-      ease: 'power1.out',
-    });
+      scale: 3,
+      duration: 2,
+      ease: 'none',
+    }, "-=2");
   </script>
 </body>
 </html>
