--- a/dpc-web/product-fabric-design.html
+++ b/dpc-web/product-fabric-design.html
@@ -99,64 +99,118 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div class="fabric-item">
-                        <img class="img w-100" src="images/Fabric/Indoor/Amigo/Amigo-01.jpg" alt=""
-                                    loading="lazy">
-                        <p class="pt-2 m-0" id="design-name">Amigo</p>
-                        <p class="pt-2 m-0" id="design-code">Amigo - 01</p>
-                    </div>
-                    <div class="fabric-item">
-                        <img class="img w-100" src="images/Fabric/Indoor/Amigo/Amigo-02.jpg" alt=""
-                                    loading="lazy">
-                        <p class="pt-2 m-0" id="design-name">Amigo</p>
-                        <p class="pt-2 m-0" id="design-code">Amigo - 02</p>
+                    <div class="row">
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Amigo/Amigo-01.jpg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Amigo</p>
+                            <p class="pt-2 m-0" id="design-code">Amigo - 01</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Amigo/Amigo-02.jpg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Amigo</p>
+                            <p class="pt-2 m-0" id="design-code">Amigo - 02</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Amigo/Amigo-03.jpg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Amigo</p>
+                            <p class="pt-2 m-0" id="design-code">Amigo - 03</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Amigo/Amigo-04.jpg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Amigo</p>
+                            <p class="pt-2 m-0" id="design-code">Amigo - 04</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Amigo/Amigo-05.jpg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Amigo</p>
+                            <p class="pt-2 m-0" id="design-code">Amigo - 05</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Amigo/Amigo-06.jpg" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Amigo</p>
+                            <p class="pt-2 m-0" id="design-code">Amigo - 06</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Coco/coco-11_COCO_11.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Coco</p>
+                            <p class="pt-2 m-0" id="design-code">Coco - 11</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Coco/coco-36_COCO-36.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Coco</p>
+                            <p class="pt-2 m-0" id="design-code">Coco - 36</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Coco/coco-38a_coco-38A.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Coco</p>
+                            <p class="pt-2 m-0" id="design-code">Coco - 38</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Coco/coco-52_coco-52.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Coco</p>
+                            <p class="pt-2 m-0" id="design-code">Coco - 52</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Coco/coco-53b_COCO_53B.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Coco</p>
+                            <p class="pt-2 m-0" id="design-code">Coco - 53</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Coco/coco-54b_coco-54B.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Coco</p>
+                            <p class="pt-2 m-0" id="design-code">Coco - 54</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Coco/coco-55a_coco-55A.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Coco</p>
+                            <p class="pt-2 m-0" id="design-code">Coco - 55</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Coco/coco-79_COCO_79.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Coco</p>
+                            <p class="pt-2 m-0" id="design-code">Coco - 79</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Terra NW/terra-06_terra_06.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Terra</p>
+                            <p class="pt-2 m-0" id="design-code">Terra - 06</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Terra NW/terra-13_terra_13.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Terra</p>
+                            <p class="pt-2 m-0" id="design-code">Terra - 13</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Puente/puente-03_puente_03.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Puente</p>
+                            <p class="pt-2 m-0" id="design-code">Puente - 03</p>
+                        </div>
+                        <div class="fabric-item">
+                            <img class="img w-100" src="images/Fabric/Indoor/Puente/puente-06_puente_06.webp" alt=""
+                                        loading="lazy">
+                            <p class="pt-2 m-0" id="design-name">Puente</p>
+                            <p class="pt-2 m-0" id="design-code">Puente - 06</p>
+                        </div>
                     </div>
                 </div>
                     
-                <div class="container">
-                    <div class="fabric-item">
-                        <img class="img w-100" src="images/Fabric/Indoor/Coco/coco-11_COCO_11.webp" alt=""
-                                    loading="lazy">
-                        <p class="pt-2 m-0" id="design-name">Coco</p>
-                        <p class="pt-2 m-0" id="design-code">Coco - 11</p>
-                    </div>
-                    <div class="fabric-item">
-                        <img class="img w-100" src="images/Fabric/Indoor/Coco/coco-36_COCO-36.webp" alt=""
-                                    loading="lazy">
-                        <p class="pt-2 m-0" id="design-name">Coco</p>
-                        <p class="pt-2 m-0" id="design-code">Coco - 36</p>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="fabric-item">
-                        <img class="img w-100" src="images/Fabric/Indoor/Terra NW/terra-06_terra_06.webp" alt=""
-                                    loading="lazy">
-                        <p class="pt-2 m-0" id="design-name">Terra</p>
-                        <p class="pt-2 m-0" id="design-code">Terra - 06</p>
-                    </div>
-                    <div class="fabric-item">
-                        <img class="img w-100" src="images/Fabric/Indoor/Terra NW/terra-13_terra_13.webp" alt=""
-                                    loading="lazy">
-                        <p class="pt-2 m-0" id="design-name">Terra</p>
-                        <p class="pt-2 m-0" id="design-code">Terra - 13</p>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="fabric-item">
-                        <img class="img w-100" src="images/Fabric/Indoor/Puente/puente-03_puente_03.webp" alt=""
-                                    loading="lazy">
-                        <p class="pt-2 m-0" id="design-name">Puente</p>
-                        <p class="pt-2 m-0" id="design-code">Puente - 03</p>
-                    </div>
-                    <div class="fabric-item">
-                        <img class="img w-100" src="images/Fabric/Indoor/Puente/puente-06_puente_06.webp" alt=""
-                                    loading="lazy">
-                        <p class="pt-2 m-0" id="design-name">Puente</p>
-                        <p class="pt-2 m-0" id="design-code">Puente - 06</p>
-                    </div>
-                </div>
-                
-
                 <div class="button-showmore">
                     <button type="button" class="btn btn-primary" id="btn-showmore">
                         SHOW MORE PRODUCTS
