--- a/public/dpc-web/our-project.html
+++ b/public/dpc-web/our-project.html
@@ -22,7 +22,7 @@
                             <div class="col-2 d-flex align-items-center">
                                 <a class="nav_item" href="/contact.html">CONTACT</a>
                             </div>
-                            <div class="col-8 text-center">
+                            <div class="col-8 text-center logo">
                                 <a href="/">
                                     <img src="images/logo.svg" width="55" id="img-logo-ref" alt="logo" loading="lazy">
                                 </a>
